# ChangeLog for media-sound/amarok
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok/ChangeLog,v 1.39 2004/12/12 23:18:12 eradicator Exp $

*amarok-1.2_beta2 (12 Dec 2004)

  12 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +amarok-1.2_beta2.ebuild:
  Version bump.

  04 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  amarok-1.1.1.ebuild, amarok-1.2_beta1.ebuild:
  Relaxing the arts dependency.  Closes bug #72869.

  30 Nov 2004; Sven Wegener <swegener@gentoo.org> amarok-1.1.1.ebuild,
  amarok-1.2_beta1.ebuild:
  Fixed invalid atoms in *DEPEND.

*amarok-1.2_beta1 (29 Nov 2004)

  29 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  amarok-1.1.1.ebuild, +amarok-1.2_beta1.ebuild:
  Version bump (package.mask'd beta) and fix missing depend on
  media-sound/kdemultimedia for CD playback.

  22 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  amarok-1.1.1.ebuild:
  -sparc

  12 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org> -amarok-0.9.ebuild,
  amarok-1.1.1.ebuild:
  Cleanup.

  07 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  amarok-1.1.1.ebuild:
  Readded gstreamer support forcing the mad plugin to be installed for
  gstreamer support as the ffmpeg plugin won't work (see bug #66902).

  05 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  amarok-1.1.1.ebuild:
  Removing gstreamer support as it is horribly broken and uses 100% CPU under
  some circumstances... see bug #65434 comment #3.

  26 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  amarok-1.1.1.ebuild:
  Changing dep to =libvisual-0.1.6 to close bug #68731.

*amarok-1.1.1 (09 Oct 2004)

  09 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +amarok-1.1.1.ebuild, -amarok-1.1.ebuild:
  Version bump for bug #66902.

  30 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> amarok-1.1.ebuild:
  Removed noamazon support as it is broken in this version. Fixed upstream for
  next release.
