@@ -1,8 +1,8 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok/Attic/amarok-1.2_beta2.ebuild,v 1.1 2004/12/12 23:18:12 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok/Attic/amarok-1.2_beta2.ebuild,v 1.2 2004/12/13 11:02:43 eradicator Exp $
 
-IUSE="noamazon cjk xmms opengl xine arts gstreamer"
+IUSE="noamazon cjk xmms opengl xine arts gstreamer mysql"
 
 inherit kde eutils
 
@@ -31,7 +31,8 @@ DEPEND=">=kde-base/kdemultimedia-3.2
 	>=kde-base/kdelibs-3.2
 	>=x11-libs/qt-3.3
 	gstreamer? ( >=media-libs/gst-plugins-0.8.1
-	             >=media-plugins/gst-plugins-mad-0.8.1 )"
+	             >=media-plugins/gst-plugins-mad-0.8.1 )
+	mysql? ( >=dev-db/mysql-3 )"
 
 need-kde 3.2
 
@@ -49,7 +50,7 @@ src_unpack() {
 src_compile() {
 	PREFIX="`kde-config --prefix`"
 
-	myconf="`use_with arts` `use_with xine` `use_with gstreamer`"
+	myconf="`use_with arts` `use_with xine` `use_with gstreamer` `use_enable mysql`"
 	myconf="${myconf} `use_with opengl` `use_enable !noamazon amazon`"
 
 	kde_src_compile myconf configure make || die
