@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/amarok
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok/ChangeLog,v 1.39 2004/12/12 23:18:12 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok/ChangeLog,v 1.40 2004/12/13 11:02:43 eradicator Exp $
+
+  13 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  -amarok-1.2_beta1.ebuild, amarok-1.2_beta2.ebuild:
+  Added mysql support.
 
 *amarok-1.2_beta2 (12 Dec 2004)
 
